--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@react-navigation/stack": "^6.3.11",
+    "bip39": "3.0.4",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.9",
-    "bip39": "3.0.4",
-    "react-native-bip39": "2.3.0"
+    "react-native-bip39": "2.3.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
