--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-bip39": "2.3.0",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-web": "~0.18.9"
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-web": "~0.18.9",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
