--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@react-navigation/stack": "^6.3.11",
-    "bip39": "3.0.4",
+    "bip39": "^3.0.4",
+    "ethereumjs-wallet": "^1.0.2",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
