--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ethereumjs-wallet": "^1.0.2",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "hdkey": "^2.1.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
